# krypton-oor-tauri-build

.github/workflows/: build-tauri-windows.yml
app/: globals.css  page.tsx
desktop/: README-TAURI.txt  index.html  package-lock.json  package.json  vite.config.mjs
desktop/scripts/: prepare-ocr-assets.mjs  validate-offline.mjs  validate-tauri.mjs
desktop/src/: App.tsx  globals.css  main.tsx  tesseract-browser.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.ico.b64
desktop/src-tauri/src/: main.rs
